[gd_scene load_steps=3 format=3 uid="uid://bjhyklkhqxywe"]

[ext_resource type="FontFile" uid="uid://dtcjge83lnvsh" path="res://assets/MegamaxJonathanToo-YqOq2.ttf" id="1_ouf4f"]
[ext_resource type="Script" uid="uid://cnug5n134nfct" path="res://scripts/start_menu.gd" id="1_thu50"]

[node name="startMenu" type="Panel"]
z_index = 1
offset_right = 1920.0
offset_bottom = 1080.0
pivot_offset = Vector2(960, 540)
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_thu50")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.192157, 0.192157, 0.192157, 1)

[node name="startBtn" type="Button" parent="."]
z_index = 2
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -476.923
offset_top = 321.539
offset_right = -206.923
offset_bottom = 428.539
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_ouf4f")
theme_override_font_sizes/font_size = 72
action_mode = 0
text = "Start
"

[node name="titleLabel" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -502.0
offset_top = -352.0
offset_right = 498.0
offset_bottom = -78.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0.486275, 0.741176, 1)
theme_override_constants/outline_size = 50
theme_override_fonts/normal_font = ExtResource("1_ouf4f")
theme_override_font_sizes/normal_font_size = 250
text = "Pong
"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="quitBtn" type="Button" parent="."]
z_index = 2
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 264.615
offset_top = 321.539
offset_right = 534.615
offset_bottom = 428.539
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_ouf4f")
theme_override_font_sizes/font_size = 72
action_mode = 0
text = "Quit
"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -335.0
offset_top = 79.0
offset_right = 335.0
offset_bottom = 188.0
grow_horizontal = 2
grow_vertical = 2

[node name="leftBtn" type="Button" parent="HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_ouf4f")
theme_override_font_sizes/font_size = 100
text = "-"

[node name="targetPointLabel" type="RichTextLabel" parent="HBoxContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("1_ouf4f")
theme_override_font_sizes/normal_font_size = 50
text = "points"
fit_content = true
scroll_active = false
horizontal_alignment = 1
vertical_alignment = 1

[node name="rightBtn" type="Button" parent="HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_ouf4f")
theme_override_font_sizes/font_size = 100
text = "+"
